{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 43,
  "lineage": "213338e7-6498-9190-160f-bb970791b363",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f82fd0aea2e0e0fd",
            "arn": "arn:aws:ec2:ap-northeast-1:116321084521:elastic-ip/eipalloc-0f82fd0aea2e0e0fd",
            "association_id": "eipassoc-0dcf6d4caf0b79d3c",
            "domain": "vpc",
            "id": "eipalloc-0f82fd0aea2e0e0fd",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0f58b2814d28e4a3a",
            "private_dns": "ip-10-0-1-58.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.58",
            "public_dns": "ec2-57-182-234-101.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.182.234.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bra-b-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-nat-eip",
              "Project": "bra-b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:116321084521:internet-gateway/igw-07694e0bd0b19294a",
            "id": "igw-07694e0bd0b19294a",
            "owner_id": "116321084521",
            "tags": {
              "Name": "bra-b-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-igw",
              "Project": "bra-b"
            },
            "vpc_id": "vpc-0139843ef8e7474c2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f82fd0aea2e0e0fd",
            "association_id": "eipassoc-0dcf6d4caf0b79d3c",
            "connectivity_type": "public",
            "id": "nat-0d611165e075a7115",
            "network_interface_id": "eni-0f58b2814d28e4a3a",
            "private_ip": "10.0.1.58",
            "public_ip": "57.182.234.101",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02d04ce1a46b779d8",
            "tags": {
              "Name": "bra-b-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-nat",
              "Project": "bra-b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:116321084521:route-table/rtb-06111b3f0e2157a14",
            "id": "rtb-06111b3f0e2157a14",
            "owner_id": "116321084521",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d611165e075a7115",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bra-b-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-private-rt",
              "Project": "bra-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0139843ef8e7474c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:116321084521:route-table/rtb-0c760d5800963da16",
            "id": "rtb-0c760d5800963da16",
            "owner_id": "116321084521",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07694e0bd0b19294a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bra-b-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-public-rt",
              "Project": "bra-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0139843ef8e7474c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b2b1a6d56e7af90",
            "route_table_id": "rtb-06111b3f0e2157a14",
            "subnet_id": "subnet-0be00ae6abb43a18e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8911bb6b172e384",
            "route_table_id": "rtb-06111b3f0e2157a14",
            "subnet_id": "subnet-0de5fc1b9ba958a4e"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2f466e221327593",
            "route_table_id": "rtb-0c760d5800963da16",
            "subnet_id": "subnet-02d04ce1a46b779d8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c61476327c9362fe",
            "route_table_id": "rtb-0c760d5800963da16",
            "subnet_id": "subnet-074fe222b0429a59d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:116321084521:security-group/sg-0673471523dae7449",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0673471523dae7449",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03dd9eec693d05373"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "bra-b-dev-db-sg",
            "name_prefix": "",
            "owner_id": "116321084521",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bra-b-dev-db-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-db-sg",
              "Project": "bra-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0139843ef8e7474c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.lambda",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:116321084521:security-group/sg-03dd9eec693d05373",
            "description": "Security group for Lambda function",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03dd9eec693d05373",
            "ingress": [],
            "name": "bra-b-dev-lambda-sg",
            "name_prefix": "",
            "owner_id": "116321084521",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bra-b-dev-lambda-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-lambda-sg",
              "Project": "bra-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0139843ef8e7474c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:116321084521:subnet/subnet-0be00ae6abb43a18e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be00ae6abb43a18e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116321084521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bra-b-dev-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-private-subnet-1",
              "Project": "bra-b"
            },
            "vpc_id": "vpc-0139843ef8e7474c2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:116321084521:subnet/subnet-0de5fc1b9ba958a4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de5fc1b9ba958a4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116321084521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bra-b-dev-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-private-subnet-2",
              "Project": "bra-b"
            },
            "vpc_id": "vpc-0139843ef8e7474c2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:116321084521:subnet/subnet-02d04ce1a46b779d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d04ce1a46b779d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116321084521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bra-b-dev-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-public-subnet-1",
              "Project": "bra-b"
            },
            "vpc_id": "vpc-0139843ef8e7474c2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:116321084521:subnet/subnet-074fe222b0429a59d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074fe222b0429a59d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "116321084521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bra-b-dev-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-public-subnet-2",
              "Project": "bra-b"
            },
            "vpc_id": "vpc-0139843ef8e7474c2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:116321084521:vpc/vpc-0139843ef8e7474c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a41f3d7ba6b65179",
            "default_route_table_id": "rtb-052e8bf1b71f1df13",
            "default_security_group_id": "sg-0ecacd6acbd606429",
            "dhcp_options_id": "dopt-0e724bc146e35d849",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0139843ef8e7474c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052e8bf1b71f1df13",
            "owner_id": "116321084521",
            "tags": {
              "Name": "bra-b-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "bra-b-dev-vpc",
              "Project": "bra-b"
            }
          }
        }
      ]
    }
  ]
}